<resources>
    <string name="app_name">设艺</string>
    <string name="action_settings">Settings</string>
    <string name="title">Design</string>

    <string name="not_update">没有更新</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string-array name="tabTitles">
        <item>最近更新</item>
        <item>平面设计</item>
        <item>VI设计</item>
        <item>logo设计</item>
        <item>画册设计</item>
        <item>海报设计</item>
        <item>包装设计</item>
        <item>书籍装帧</item>
        <item>名片设计</item>
        <item>地产设计</item>
        <item>版式设计</item>
        <item>封面设计</item>
        <item>广告设计</item>
        <item>字体设计</item>
        <item>单页折页</item>
        <item>UI设计</item>
        <item>网页设计</item>
        <item>工业设计</item>
        <item>环艺设计</item>
        <item>室内设计</item>
        <item>服装设计</item>
        <item>摄影欣赏</item>
        <item>插画欣赏</item>
        <item>国画欣赏</item>
        <item>油画欣赏</item>
        <item>其他设计</item>
    </string-array>

    <string name="without_the_internet">没有网络</string>

    <!-- xlistview start -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;&#8230;&#8230;</string>
    <string name="xlistview_header_last_time">更新</string>
    <string name="xlistview_footer_hint_normal">上滑查看</string>
    <string name="xlistview_footer_hint_ready">松开载入</string>
    <!-- xlistview end -->

    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="title_activity_cards">选择</string>
    <string name="title_activity_setting">设置</string>
    <string name="hello_world">Hello world!</string>

    <string name="card_choose">标签卡选择</string>
    <string name="theme_choose">皮肤选择</string>
    <string name="clear_disk">缓存清理</string>
    <string name="clear_mer">内存清理</string>
    <string name="about">关于</string>
    <string name="connect">联系我们</string>
    <string name="title_activity_theme_choose">ThemeChooseActivity</string>
    <string name="cards_save">保存</string>
    <string name="save_img_succed">保存成功</string>
    <string name="save_img_failured">保存图片失败</string>
    <string name="tab_latest">最新</string>
    <string name="tab_design">设计</string>
    <string name="tab_art">艺术</string>
    <string name="tab_my">关于</string>
    <string name="fragment_latest_title">设·艺</string>

    <string name="helloword">名人名言怎么没了呢,快找下面那家伙/(ㄒoㄒ)/~~</string>
    <string name="helloword_name">程序猴</string>
    <string name="sea_web_text">网页浏览</string>
    <string name="about_text_copyright">\t\t\t本应用包涵的文字、图片及素材均来自互联网，仅供参考和学习，版权归原作者所有，切勿作商业用途。</string>
    <string name="about_text">\t\t\t设·艺涵盖几乎所有种类的设计与绘画、摄影等艺术。主要对设计师、相关专业学生以及设计艺术爱好者提供一个找灵感、找创意的作品欣赏平台。\n\t\t\t如果对该APP有改进的建议和任何意见请联系我们。\n\t\t\t欢迎咨询安卓项目问题。\n\t\t\t联系邮箱：wyjunqi2007@163.com</string>
</resources>
